# play-with-ai

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  cliff.toml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/docker-build/: action.yml
.github/actions/notify-status/: action.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: _reusable-docker-build.yml  api-breaking-change.yml  backport.yml  benchmark.yml  cache-cleanup.yml  canary-deploy.yml  changelog-preview.yml  ci.yml  dockerlint.yml  docs-check.yml  hotfix.yml  labeler.yml  license-scan.yml  merge-queue.yml  migration-safety.yml  nightly-audit.yml  notify.yml  observability-check.yml  perf-smoke.yml  pr-preview.yml  quality.yml  release.yml  rollback.yml  scorecard.yml  security-scan.yml  stale.yml  terraform-lint.yml  version-bump.yml
alembic/: env.py
alembic/versions/: 0001_create_books_table.py
api/: index.html  openapi.json
infra/terraform/keycloak/: .terraform.lock.hcl  (+4 more)
observability/: otel-collector-config.yaml
observability/tempo/: tempo.yaml
src/: app.py  auth.py  config.py  db.py  entities.py  models.py  otel.py  ratelimit.py  secrets.py  service.py
tests/: test_api.py  test_auth.py  test_config_strict.py  test_migrations.py  test_secrets.py  test_security_headers.py  test_validation.py
tests/integration/: test_app_integration.py
tests/perf/: test_health_load.py
(+6 files in other folders)
